# GromovStudy

./: README.md
DZ_6/: CMakeLists.txt  function.cpp  function.h  main.cpp
DZ_7/: CMakeLists.txt  main.cpp  pid.cpp  pid.h  pwm.cpp  pwm.h  regulator.h  sensor.cpp  sensor.h
Программа из видео классы/: main.cpp  regulator.cpp
